# verification-helper

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.en.md  README.ja.md  README.md  _config.yml  document.ja.md  document.md  example.test.cpp  example.test.cpp.md  index.html  index.md  installer.en.md  installer.html  installer.ja.md  installer.js  installer.md  installer.test.md  memo.md  setup.cfg  setup.py  setup.py.md  speedup.md
.github/workflows/: format.yml  pypi.yml  test.yml  verify.yml
.verify-helper/: .gitignore  config.toml  timestamps.remote.json
.verify-helper/docs/: _config.yml  index.md
.verify-helper/timestamp/: timestamp.json
Examples2/Haskell/: HelloWorld.hs  HelloWorld.hs.md  HelloWorld.test.hs  HelloWorld.test.hs.md
_includes/: document_footer.html  document_header.html  toppage_body.html
_layouts/: document.html  toppage.html
assets/css/: copy-button.css
build-pages-pkg/: build-pages.py
build-pages-pkg/assets/: site-header.txt
data/: test.sh  verify.yml
data/assets/: _config.yml
examples/: 3872.yukicoder.test.cpp  3872.yukicoder.test.cpp~  circle.test.awk  develop.failed.test.cpp  develop.test.cpp  failed_to_bundle.hpp  failed_to_verify.hpp  failed_to_verify.test.cpp  hoge.test.cpp  include_relative.test.cpp  macros.hpp  macros.hpp.md  monoids.hpp  monoids.hpp.md  precision.test.cpp  segment_tree.hpp  segment_tree.hpp.md  segment_tree.md  segment_tree.point_set_range_composite.test.cpp  segment_tree.point_set_range_composite.test.cpp.md  segment_tree.range_minimum_query.test.cpp  segment_tree.range_minimum_query.test.cpp.md  segment_tree.range_sum_query.test.cpp  segment_tree.range_sum_query.test.cpp.md  test-a.test.cpp  test-c.test.cpp  union_find_tree.aoj.test.cpp  union_find_tree.aoj.test.cpp.md  union_find_tree.hpp  union_find_tree.hpp.md  union_find_tree.yosupo.test.cpp  union_find_tree.yosupo.test.cpp.md
examples/CSharpScript/: csharpscript.test.csx
examples/awk/: circle.awk  circle.awk.md  circle.test.awk  circle.test.awk.md
examples/csharpscript/: helloworld.csx.md  helloworld.test.csx.md  segment_tree.csx  segment_tree.csx.md  segment_tree.point_set_range_composite.test.csx  segment_tree.point_set_range_composite.test.csx.md  segment_tree.range_minimum_query.test.csx  segment_tree.range_minimum_query.test.csx.md  segment_tree.range_sum_query.test.csx  segment_tree.range_sum_query.test.csx.md
examples/csharpsx/: .editorconfig  csharpsx.sln
examples/debug/: external_failure_flag.test.cpp  failed_to_bundle.hpp.md  gcc_only.test.cpp  gcc_only.test.cpp.md  include_relative.test.cpp  include_relative.test.cpp.md  not_verified.hpp  not_verified.hpp.md  precision.test.cpp  precision.test.cpp.md  relative_path.hpp  relative_path.hpp.md  relative_path.test.cpp  relative_path.test.cpp.md  sameas.test.cpp  sameasrunner.test.py  yukicoder.test.cpp.md
examples/go/: go.mod  helloworld.go.md  helloworld.test.go  helloworld.test.go.md
examples/java/: HelloWorld.java  HelloWorld.java.md  HelloWorld_test.java  HelloWorld_test.java.md
examples/nim/: headers.nim  headers.nim.md  hoge.nim  hoge.nim.md  union_find_tree.nim  union_find_tree.nim.md  union_find_tree_aoj_test.nim  union_find_tree_aoj_test.nim.md  union_find_tree_yosupo_test.nim  union_find_tree_yosupo_test.nim.md
examples/python/: hello_world.py  hello_world.py.md  hello_world.test.py  hello_world.test.py.md  union_find.py  union_find.py.md  union_find_aoj.test.py  union_find_aoj.test.py.md  union_find_yosupo.test.py  union_find_yosupo.test.py.md
examples/ruby/: hello_world.rb  hello_world.test.rb
examples/rust/: Cargo.toml
examples/rust/crates/helloworld/hello/: Cargo.toml
examples/rust/crates/helloworld/hello/src/: lib.rs  lib.rs.md
examples/rust/crates/helloworld/world/: Cargo.toml
examples/rust/crates/helloworld/world/src/: lib.rs.md
examples/rust/crates/io/input/: Cargo.toml
examples/rust/crates/io/input/src/: lib.rs  lib.rs.md
examples/rust/crates/io/scanner/: Cargo.toml
examples/rust/crates/io/scanner/src/: lib.rs  lib.rs.md
examples/rust/crates/world/src/: lib.rs
examples/rust/src/: lib.rs  lib.rs.md
examples/rust/verification/: Cargo.toml
examples/rust/verification/aizu-online-judge/: Cargo.toml
examples/rust/verification/yukicoder/: Cargo.toml
onlinejudge_bundle/: __init__.py.md  main.py  main.py.md
onlinejudge_ci/: main.py
onlinejudge_verify/: __init__.py.md  build-pages.py  bundle.py  config.py  config.py.md  docs.py  languages.py  main.py  main.py.md  marker.py  marker.py.md  utils.py  utils.py.md  verify.py  verify.py.md
onlinejudge_verify/documentation/: __init__.py.md  build.py  build.py.md  configure.py  main.py  (+6 more)
onlinejudge_verify_resources/: __init__.py.md  _config.yml  index.html
tests/: __init__.py.md  test_bundle.py  test_bundle.py.md  test_cplusplus.py  test_cplusplus.py.md  test_docs.py  test_docs.py.md  test_python.py  test_python.py.md  test_rust.py  test_special_comments.py  test_stats.py  test_stats.py.md  test_verify.py  test_verify.py.md  utils.py  utils.py.md
verify/: example.test.cpp.html  example.test.cpp.md
(+105 files in other folders)
