[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development
    Topic :: Utilities

[options.extras_require]
dev =
    isort == 4.3.21
    mypy == 0.740
    pylint == 2.4.3
    yapf == 0.28.0

[yapf]
column_limit = 9999

[isort]
line_length = 9999
default_section = THIRDPARTY
known_first_party = onlinejudge

[mypy]

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-markdown.*]
ignore_missing_imports = True

[mypy-onlinejudge.*]
ignore_missing_imports = True
