[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development
    Topic :: Utilities

[options.extras_require]
dev =
    isort == 5.5.2
    mypy == 0.782
    pylint == 2.6.0
    yapf == 0.30.0

[yapf]
column_limit = 9999

[isort]
line_length = 9999
default_section = THIRDPARTY
known_first_party = onlinejudge

[mypy]

[mypy-*.*]
ignore_missing_imports = True
