[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development
    Topic :: Utilities

[options.extras_require]
dev =
    isort == 5.10.1
    mypy == 0.941
    pylint == 2.7.3
    yapf == 0.30.0

[yapf]
column_limit = 9999

[isort]
line_length = 9999
default_section = THIRDPARTY
known_first_party = onlinejudge

[pylint]
# run: $ pylint --rcfile=setup.cfg modules_or_packages
attr-rgx = [_a-z][0-9_a-z]{0,30}$|([a-z]+_)?[A-Z]+$
argument-rgx = [_a-z][0-9_a-z]{0,30}$|([a-z]+_)?[A-Z]+$
variable-rgx = [_a-z][0-9_a-z]{0,30}$|([a-z]+_)?[A-Z]+$  # `([a-z]+_)?[A-Z]+$` is for valiables like `CXXFLAGS` or `default_LANG`
disable =
    bad-continuation,
    broad-except,
    consider-using-enumerate,
    cyclic-import,  # TODO: remove this.
    duplicate-code,
    fixme,
    global-statement,
    line-too-long,
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    no-else-break,
    no-else-raise,
    no-else-return,
    no-member,
    no-self-use,
    protected-access,  # TODO: remove this.
    redefined-builtin,
    too-few-public-methods,
    too-many-arguments,
    too-many-boolean-expressions,
    too-many-branches,
    too-many-instance-attributes,
    too-many-lines,
    too-many-locals,
    too-many-nested-blocks,
    too-many-public-methods,
    too-many-return-statements,
    too-many-statements,
    undefined-loop-variable,  # TODO: remove this.
    unused-argument,
    unused-wildcard-import,
    wildcard-import,
    wrong-import-order,

[mypy]

[mypy-*.*]
ignore_missing_imports = True
